feat:新增魚類資料的api文件
